Some changes after check validation

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="about">
                     <div class="about__text">
                         <div class="about__item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo quaerat repellendus porro, facilis ipsa tempore inventore? Officia accusamus ab eos totam nihil, deserunt quibusdam iure ipsam, incidunt atque rem.</div>
-                        <div class="about__item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error nemo odio illum soluta aut dignissimos alias labore earum possimus harum? Magnam nostrum dolorum rem, inventore aut non maiores nisi voluptate.</div>                        </div>
+                        <div class="about__item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error nemo odio illum soluta aut dignissimos alias labore earum possimus harum? Magnam nostrum dolorum rem, inventore aut non maiores nisi voluptate.</div>
                     </div>
 
                     <div class="slider">
@@ -297,8 +297,8 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="btn__prev">&#10094</button>
-                        <button class="btn__next">&#10095</button>
+                        <button class="btn__prev">&#10094;</button>
+                        <button class="btn__next">&#10095;</button>
                     </div>
                 </div>
 
@@ -329,7 +329,7 @@
                         <div class="work__content">
                             <div class="work__title">Hair dresser</div>
                             <div class="work__category">Branding</div>
-                            <a class="works__btn" href="#">View &#10095</a>
+                            <a class="works__btn" href="#">View &#10095;</a>
                         </div>
                     </div>
                     <div class="work" data-cat="design">
@@ -339,7 +339,7 @@
                         <div class="work__content">
                             <div class="work__title">Shop</div>
                             <div class="work__category">Design</div>
-                            <a class="works__btn" href="#">View &#10095</a>
+                            <a class="works__btn" href="#">View &#10095;</a>
                         </div>
                     </div>
                     <div class="work" data-cat="development">
@@ -349,7 +349,7 @@
                         <div class="work__content">
                             <div class="work__title">Business website</div>
                             <div class="work__category">Development</div>
-                            <a class="works__btn" href="#">View &#10095</a>
+                            <a class="works__btn" href="#">View &#10095;</a>
                         </div>
                     </div>
                     <div class="work" data-cat="branding">
@@ -359,7 +359,7 @@
                         <div class="work__content">
                             <div class="work__title">Hair dresser</div>
                             <div class="work__category">Branding</div>
-                            <a class="works__btn" href="#">View &#10095</a>
+                            <a class="works__btn" href="#">View &#10095;</a>
                         </div>
                     </div>
                     <div class="work" data-cat="branding">
@@ -369,7 +369,7 @@
                         <div class="work__content">
                             <div class="work__title">Hair dresser</div>
                             <div class="work__category">Branding</div>
-                            <a class="works__btn" href="#">View &#10095</a>
+                            <a class="works__btn" href="#">View &#10095;</a>
                         </div>
                     </div>
                     <div class="work" data-cat="branding">
@@ -379,7 +379,7 @@
                         <div class="work__content">
                             <div class="work__title">Hair dresser</div>
                             <div class="work__category">Branding</div>
-                            <a class="works__btn" href="#">View &#10095</a>
+                            <a class="works__btn" href="#">View &#10095;</a>
                         </div>
                     </div>
                     <div class="work" data-cat="branding">
@@ -389,7 +389,7 @@
                         <div class="work__content">
                             <div class="work__title">Hair dresser</div>
                             <div class="work__category">Branding</div>
-                            <a class="works__btn" href="#">View &#10095</a>
+                            <a class="works__btn" href="#">View &#10095;</a>
                         </div>
                     </div>
                     <div class="work" data-cat="branding">
@@ -399,7 +399,7 @@
                         <div class="work__content">
                             <div class="work__title">Hair dresser</div>
                             <div class="work__category">Branding</div>
-                            <a class="works__btn" href="#">View &#10095</a>
+                            <a class="works__btn" href="#">View &#10095;</a>
                         </div>
                     </div>
                     <div class="work" data-cat="branding">
@@ -409,7 +409,7 @@
                         <div class="work__content">
                             <div class="work__title">Hair dresser</div>
                             <div class="work__category">Branding</div>
-                            <a class="works__btn" href="#">View &#10095</a>
+                            <a class="works__btn" href="#">View &#10095;</a>
                         </div>
                     </div>
                 </div>
@@ -423,7 +423,7 @@
 
                 <div class="banner">
                     <div class="section__header">
-                        <h2 class="banner__title">Do you like <span class="section__title--uppercase">our work</span> so far? </br>
+                        <h2 class="banner__title">Do you like <span class="section__title--uppercase">our work</span> so far? <br>
                         Let's talk about <span class="section__title--uppercase">your project</span>!</h2>
                     </div>
                     <a class="banner__btn" href="#">Get in touch</a>
@@ -568,7 +568,7 @@
                     </div>
 
                     <div class="contact__form">
-                        <form action="/" method="">
+                        <form action="/" method="GET">
                             <div class="form__header">
                                 <input class="form__input" type="text" name="Your name" placeholder="Your name">
                                 <input class="form__input" type="text" name="Your subject" placeholder="Your subject">
@@ -576,7 +576,7 @@
                                 <input class="form__input" type="text" name="Company name" placeholder="Company name">
                             </div>
                             <div class="form__message">
-                                <textarea name="message" id="" cols="100" rows="10" placeholder="Write your message"></textarea>
+                                <textarea name="message" id="" cols="100" rows="10" placeholder="Write your message">Write your message</textarea>
                             </div>
                             <div class="form__btn">
                                 <button type="submit">Send message</button>
@@ -608,7 +608,7 @@
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="footer__copyright">&copy 2015 Startup, designed by shapedtheme</div>
+                <div class="footer__copyright">&copy; 2015 Startup, designed by shapedtheme</div>
             </div>
         </footer>
         <!-- END FOOTER -->
