--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                                 <input class="form__input" type="text" name="Company name" placeholder="Company name">
                             </div>
                             <div class="form__message">
-                                <textarea name="message" id="" cols="100" rows="10" placeholder="Write your message">Write your message</textarea>
+                                <textarea name="message" cols="100" rows="10" placeholder="Write your message">Write your message</textarea>
                             </div>
                             <div class="form__btn">
                                 <button type="submit">Send message</button>
